Added caching services for orders and users, made changes to the order and user service, added endpoints for orders, made changes to the order mapper